2010-01-15 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/hc08/support.c,
	  support/regression/ports/pic14/support.c,
	  support/regression/ports/pic16/support.c,
	  support/regression/ports/xa51/support.c,
	  support/regression/tests/macro.c:
	  _asm and _endasm changed to __asm and __endasm

2010-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/gbz80/string.c:
	  Removed unused gbz80-specific string routines.

2010-01-14 Borut Razem <borut.razem AT siol.net>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCC.lex, doc/sdccman.lyx,
	  device/include/mcs51/mcs51reg.h,
	  support/regression/tests/bug2817646.c,
	  support/regression/tests/driverstruct.c,
	  support/regression/tests/nullstring.c,
	  support/regression/tests/bug1546986.c,
	  support/regression/tests/bug-1981238.c,
	  support/regression/tests/array.c,
	  support/regression/tests/bug-1699804.c,
	  support/regression/tests/bug-221100.c,
	  support/regression/tests/bug1839277.c,
	  support/regression/tests/bug-460010.c,
	  support/regression/tests/bug1921073.c,
	  support/regression/tests/bug1839321.c,
	  support/regression/tests/float.c,
	  support/regression/tests/simplefloat.c,
	  support/regression/tests/bug2783061.c,
	  support/regression/tests/critical.c,
	  support/regression/tests/bug1551947.c,
	  support/regression/tests/bug663539.c,
	  support/regression/tests/absolute.c,
	  support/regression/tests/bug-221168.c,
	  support/regression/tests/bug-716242.c,
	  support/regression/tests/bug1348008.c,
	  support/regression/tests/bug1928022.c,
	  support/regression/tests/bug1938300.c,
	  support/regression/tests/bug-880197.c,
	  support/regression/tests/bug1536762.c,
	  support/regression/tests/bug1198642.c,
	  support/regression/tests/bug1749275.c,
	  support/regression/tests/bitopcse.c,
	  support/regression/tests/bug1535242.c,
	  support/regression/tests/bug-868103.c,
	  support/regression/tests/using.c,
	  support/regression/tests/bug1723128.c,